package com.hardway.gdtest.domain.entities.parts.interfaces;

interface FirstPartInterface {
    fun invoke()
}