package com.hardway.gdtest.domain.entities.parts.interfaces

interface ThirdPartInterface {
    fun check(input: Array<Int>): Boolean
}